kubernetes/forgejo/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  labels:
    istio.io/dataplane-mode: ambient
    name: forgejo
