kubernetes/forgejo/cloudflare.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-forgejo
  namespace: forgejo
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-forgejo
  template:
    metadata:
      labels:
        app: cloudflared-forgejo
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2026.7.3@sha256:e39ee8da81ad5e05d77f38d2f51c60ca51bf2a8450ac3abab50c17fdb91d91bf
          args:
            - tunnel
            - --no-autoupdate
            - --metrics
            - 0.0.0.0:20241
            - --config
            - /etc/cloudflared/config/config.yaml
            - run
            - 8a5f0588-1fd0-4e38-abe2-571141738805
          livenessProbe:
            httpGet:
              path: /ready
              port: 20241
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 1
          volumeMounts:
            - name: config
              mountPath: /etc/cloudflared/config
              readOnly: true
            - name: credentials
              mountPath: /etc/cloudflared/credentials.json
              subPath: credentials.json
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: cloudflared-config
        - name: credentials
          secret:
            secretName: cloudflared-forgejo-credentials
