kubernetes/forgejo/runner.yml
# apiVersion: v1
# kind: Secret
# metadata:
#   name: forgejo-runner-secret
#   namespace: forgejo
# type: Opaque
# stringData:
#   REGISTRATION_TOKEN: "<REPLACE_WITH_FORGEJO_RUNNER_TOKEN>"


# kubectl create secret generic forgejo-runner-secret \
#   --namespace forgejo \
#   --from-literal=REGISTRATION_TOKEN=<REPLACE_WITH_FORGEJO_RUNNER_TOKEN>
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo-actions-runner
  namespace: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo-actions-runner
  template:
    metadata:
      labels:
        app: forgejo-actions-runner
    spec:
      containers:
        - name: runner
          image: codeberg.org/forgejo/actions-runner:latest
          volumeMounts:
            - name: docker-sock
              mountPath: /var/run/docker.sock
            - name: runner-data
              mountPath: /data
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
        - name: runner-data
          emptyDir: {}
