kubernetes/forgejo/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: forgejo
  name: forgejo-db
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: forgejo-db
  template:
    metadata:
      labels:
        app: forgejo-db
    spec:
      serviceAccountName: forgejo-db
      containers:
        - name: postgres
          image: postgres:18@sha256:74935e72241653ca55e0414067e6d8763aceb8a810eb51b452253ec3dcfc4336
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgres-data
      volumes:
        - name: postgres-data
          hostPath:
            path: /data/forgejo/postgres
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-db-svc
  namespace: forgejo
  labels:
    app: forgejo-db
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: forgejo-db
  type: ClusterIP
