kubernetes/forgejo/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo-web
  namespace: forgejo
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: forgejo-web
  template:
    metadata:
      labels:
        app: forgejo-web
    spec:
      serviceAccountName: forgejo-web
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:16@sha256:a3e33d03e771d3e58b27de5573c3a25dc4f670583a6724c1878a6d0bbecf3556
          ports:
            - containerPort: 3000
            - containerPort: 22
          volumeMounts:
            - name: forgejo-data
              mountPath: /data
            - name: timezone
              mountPath: /etc/timezone
              readOnly: true
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
            - name: landing-page
              mountPath: /data/gitea/templates/home.tmpl
              subPath: home.tmpl
              readOnly: true
            - name: landing-page
              mountPath: /data/gitea/public/assets/css/custom-landing.css
              subPath: custom-landing.css
              readOnly: true
            - name: landing-page
              mountPath: /data/gitea/public/assets/js/custom-landing.js
              subPath: custom-landing.js
              readOnly: true
      volumes:
        - name: forgejo-data
          hostPath:
            path: /data/forgejo/data
            type: DirectoryOrCreate
        - name: timezone
          hostPath:
            path: /etc/timezone
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: landing-page
          configMap:
            name: forgejo-landing-page
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh-svc
  namespace: forgejo
  annotations:
    tailscale.com/expose: "true"
spec:
  ports:
    - name: ssh
      port: 22
      targetPort: 22
  selector:
    app: forgejo-web
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-web-svc
  namespace: forgejo
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: forgejo-web
---
