kubernetes/forgejo/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-web-route
  namespace: forgejo
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: default
  hostnames:
    - forgejo.alexmickelson.guru
  rules:
    - backendRefs:
        - name: forgejo-web-svc
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
