kubernetes/forgejo/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-web-route
  namespace: forgejo
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-ingress
    - name: pangolin-gateway
      namespace: istio-ingress
  hostnames:
    - forgejo.alexmickelson.guru
  rules:
    - backendRefs:
        - name: forgejo-web-svc
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-pangolin-route
  namespace: forgejo
spec:
  parentRefs:
    - name: pangolin-gateway
      namespace: istio-ingress
  hostnames:
    - git.alexmickelson.guru
  rules:
    - backendRefs:
        - name: forgejo-web-svc
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
